# EmbeddedProto

./: CMakeLists.txt  CONTRIBUTING.md  README.md  build_package.sh  build_test.sh  code_coverage.sh  install.py  protoc-gen-eams  protoc-gen-eams.bat  pyproject.toml  release_to_github.sh  setup.py  test_data.py
.clinerules/workflows/: workflow-embeddedproto.md
.github/workflows/: ci.yml  distribute_pypi.yml
EmbeddedProto/: EmbeddedProto.py  Field.py  Oneof.py  ProtoFile.py  TypeDefinitions.py  __main__.py  main.py
EmbeddedProto/templates/: FieldBasic_GetSet.h.jinja2  (+25 more)
doc/: Mainpage.h  version_mismatch.md
scripts/: test_version_mismatch.py
src/: Defines.h  Errors.h  FieldStringBytes.h  Fields.cpp  Fields.h  MessageInterface.cpp  MessageInterface.h  MessageSizeCalculator.h  ReadBufferFixedSize.h  ReadBufferInterface.h  ReadBufferSection.cpp  ReadBufferSection.h  RepeatedField.h  RepeatedFieldFixedSize.h  Version.h  WireFormatter.h  WriteBufferFixedSize.h  WriteBufferInterface.h
test/: TestFunctionBase.h  test_EmbeddedProto.cpp  test_IncludeOtherFiles.cpp  test_MessageSizeCalculator.cpp  test_NestedMessage.cpp  test_ReadBufferFixedSize.cpp  test_ReadBufferSection.cpp  test_RepeatedFieldFixedSize.cpp  test_RepeatedFieldMessage.cpp  test_SimpleTypes.cpp  test_WriteBufferFixedSize.cpp  test_empty_messages.cpp  test_field_options.cpp  test_max_field_size.cpp  test_oneof_fields.cpp  test_optional_fields.cpp  test_string_bytes.cpp  test_unkown_fields.cpp  test_version_mismatch.cpp  version_test_major_mismatch.h  version_test_matching.h  version_test_minor_mismatch.h
(+15 files in other folders)
