[project]
name = "EmbeddedProto"
dynamic = ["version"]
authors = [
    {name = "Embedded AMS B.V.", email = "info@EmbeddedAMS.nl"},
]
description = "EmbeddedProto generator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0 for Open Source projects, a Property license for Commercial companies."}
classifiers = [ ]
dependencies = [
    "Jinja2>=3,<4",
    "MarkupSafe>=2.0,<3",
    "six>=1.16.0,<2",
    "toposort>=1.7,<2",
    "protobuf==6.32.0",
    "grpcio-tools==1.73.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["EmbeddedProto*"]

[project.scripts]
protoc-gen-eams = "EmbeddedProto.main:main_plugin"
embeddedproto = "EmbeddedProto.EmbeddedProto:run_protoc"

[tool.setuptools.package-data]
EmbeddedProto = ["templates/*", "version.json", "src/*"]

[build-system]
requires = ["setuptools>=64", "grpcio-tools==1.75.0"]
build-backend = "setuptools.build_meta"

